--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,8 +51,13 @@ header > h1 {
 
 }
 header > p {
+    font-size: 1.2em;
     color: white;
     padding-bottom: 50px;
+    max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.287);
 }
 nav{
